--- a/TimeTableMobile/TimeTableMobile/TimeTableMobile.csproj
+++ b/TimeTableMobile/TimeTableMobile/TimeTableMobile.csproj
@@ -8,7 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Acr.UserDialogs" Version="7.1.0.483" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="RestSharp" Version="108.0.3" />
+    <PackageReference Include="RestSharp" Version="112.1.0" />
+    <PackageReference Include="System.Text.Json" Version="9.0.1" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
     <PackageReference Include="Xamarin.Essentials" Version="1.7.5" />  
     <PackageReference Include="ZXing.Net.Mobile" Version="2.4.1" />  
